# hydroponic_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  lwipopts.h  pico2w_pinout.txt
arduino_nano_adc/: Makefile  NRF24L01_SETUP.md  README.md  WIRING.md  arduino_pinout.txt  platformio.ini
arduino_nano_adc/src/: main.cpp
arduino_test_rf/: Makefile  README.md  WIRING.md  platformio.ini
arduino_test_rf/src/: main.cpp
lib/: README.md
lib/pico_dht22/: dht22.cpp  dht22.h
lib/pico_nrf24l01/: nano_nrf_receiver.cpp  nano_nrf_receiver.h  nrf24l01.cpp  nrf24l01.h
lib/pico_onewire/: ds18b20.cpp  ds18b20.h  onewire.pio  onewire_pio.cpp  onewire_pio.h
lib/pico_sht30/: sht30.cpp  sht30.h
src/: config.cpp  config.h  hydroponic_controller.cpp  hydroponic_controller.h  main.cpp
src/control/: control_base.h  fan_controller.cpp  fan_controller.h  heater_controller.cpp  heater_controller.h  lights_controller.cpp  lights_controller.h  pump_controller.cpp  pump_controller.h
src/network/: network_manager.cpp  network_manager.h  tcp_server.cpp  tcp_server.h  web_server.cpp  web_server.h
src/sensors/: sensor_manager.cpp  sensor_manager.h
src/storage/: flash_storage.cpp  flash_storage.h
src/utils/: gpio_utils.cpp  gpio_utils.h  time_utils.cpp  time_utils.h
tools/: upload_web_files.py  upload_web_files_tcp.py
web/: app.css  app.js  index.html
